Checkpoint: Transactions can be published to partitions